# Apex-Workspace

./: .gitignore  CHANGELOG.md  PARITY_ROADMAP.md  README.md  ROADMAP.md  SECURITY.md  VSCODE_PARITY.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: AUTO_UPDATE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bash.rs  docs.rs  fireflies.rs  git.rs  gmail.rs  hardware.rs  lib.rs  lsp.rs  main.rs  mcp.rs  secrets.rs  terminal.rs  watcher.rs
src/components/editor/: MarkdownPreview.tsx  MonacoEditor.tsx
src/components/knowledge/: GraphView.tsx
src/components/layout/: CenterArea.tsx  GitPanel.tsx  IntelPanel.tsx  LeftNav.tsx  LeftPanel.tsx  MenuBar.tsx  ModeBar.tsx  ProblemsPanel.tsx  StatusBar.tsx  TerminalPanel.tsx  TestExplorer.tsx  Titlebar.tsx  Workflows.tsx
src/components/pages/: AgentsPage.tsx  HunkStaging.tsx  KnowledgePage.tsx  MissionControlPage.tsx  ModelsPage.tsx  PageRouter.tsx  PageShell.tsx  PreviewPage.tsx  SettingsPage.tsx  SourceControlPage.tsx  WelcomePage.tsx
src/components/ui/: CommandPalette.tsx  Compare.tsx  Cookbook.tsx  DiffReview.tsx  ErrorBoundary.tsx  Icons.tsx  Onboarding.tsx  (+4 more)
src/lib/: agent.ts  agentRunner.ts  agents.ts  briefing.ts  codeindex.ts  cookbook.ts  deepresearch.ts  editorBridge.ts  emaildraft.ts  extract.ts  fileIcons.tsx  graph.ts  history.ts  hunks.ts  jobs.ts  keymap.ts  livenotes.ts  lsp.ts  meetingprep.ts  mentions.ts  mergeConflict.ts  ollama.ts  search.ts  snippets.ts  symbols.ts  tasks.ts  tauri.ts  tests.ts  todos.ts  useMarkers.ts  vault.ts  webfs.ts  websearch.ts  workflows.ts  workspace.ts  workspaceSettings.ts
src/store/: index.ts
