[package]
name = "apex"
version = "0.3.1"
description = "APEX — Local-first AI-native developer workspace"
authors = ["Sarthak Singh"]
edition = "2021"

[lib]
name = "apex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tiny_http = "0.12"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
sha2 = "0.10"
urlencoding = "2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sysinfo = "0.32"
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
